--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -43,7 +43,7 @@ const { Content } = await post.render();
         )
       }
     </div>
-    <div id="content" class="prose mx-auto mb-12 mt-8 text-text">
+    <div id="content" class="animate-down prose mx-auto mb-12 mt-8 text-text">
       <Content />
     </div>
     <div class="giscus pb-4"></div>
