--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -170,6 +170,10 @@ if (pageTitle === "Trevor Lee | Homepage") {
   </head>
   <body class="bg-backdrop">
     <div
+      class="pointer-events-none absolute inset-0 -z-10 h-full w-full bg-white bg-[radial-gradient(#e5e7eb_1px,transparent_1px)] [background-size:16px_16px] dark:invisible"
+    >
+    </div>
+    <div
       class=`bg-centerBackground text-text ${fullWidth ? "" : "px-4"} m-auto max-w-[640px]`
     >
       <nav class="w-full py-4">
