--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,7 +35,7 @@ const pageTitle = "Trevor Lee | Homepage";
   </section>
   <section class="animate-down">
     <span class="py-2 font-mono text-sm text-textVariant">
-      <h2 class="py-2">latest posts</h2>
+      <h2 class="py-2">Latest posts</h2>
     </span>
     <ul>
       {
@@ -51,7 +51,7 @@ const pageTitle = "Trevor Lee | Homepage";
     </ul>
     <div class="flex justify-end pb-8">
       <a href="/posts" class="link group flex items-center gap-1 py-2"
-        >view older posts <Icon
+        >View older posts <Icon
           class="text-text group-hover:animate-horizontal-bounce group-hover:text-primary group-focus:animate-horizontal-bounce group-focus-visible:text-primary"
           name="arrow-right"
         />
@@ -59,7 +59,7 @@ const pageTitle = "Trevor Lee | Homepage";
     </div>
   </section>
   <section class="animate-down">
-    <h2 class="pb-4 pt-16 font-mono text-sm text-textVariant">projects</h2>
+    <h2 class="pb-4 pt-16 font-mono text-sm text-textVariant">Projects</h2>
     <ul class="grid gap-3 sm:grid-cols-2 sm:gap-6">
       <Project
         description="These thirty six questions foster closeness through mutual vulnerability."
