--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,7 +21,7 @@ const pageTitle = "Trevor Lee | Homepage";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
-  <section class="py-24 text-center sm:py-32">
+  <section class="py-24 sm:py-32 sm:text-center">
     <p class="text-sm italic text-textVariant">~ Hello and welcome ~</p>
     <div class="text-xl">
       <h1 class="inline-flex">
@@ -34,7 +34,7 @@ const pageTitle = "Trevor Lee | Homepage";
     </div>
   </section>
   <section class="animate-down">
-    <span class="py-2 font-mono text-sm text-textVariant">
+    <span class="py-2 text-sm text-textVariant">
       <h2 class="py-2">Latest posts</h2>
     </span>
     <ul>
@@ -59,7 +59,7 @@ const pageTitle = "Trevor Lee | Homepage";
     </div>
   </section>
   <section class="animate-down">
-    <h2 class="pb-4 pt-16 font-mono text-sm text-textVariant">Projects</h2>
+    <h2 class="pb-4 pt-16 text-sm text-textVariant">Projects</h2>
     <ul class="grid gap-3 sm:grid-cols-2 sm:gap-6">
       <Project
         description="These thirty six questions foster closeness through mutual vulnerability."
