move about page to home, minor style changes

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -28,11 +28,7 @@ const buildTime = new Date().toISOString();
       >
         Updated</span
       >
-      <Icon
-        class="text-text group-hover:text-primary group-focus-visible:text-primary"
-        name="external"
-        aria-label="External link icon"
-      />
+      <Icon class="text-text" name="external" aria-label="External link icon" />
     </a>
   </div>
 </footer>
