--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -1,52 +1,19 @@
 ---
-import { Image } from "astro:assets";
+import { Icon } from "astro-icon/components";
 
-const { href, title, description, src, online } = Astro.props;
+const { href, title, description } = Astro.props;
 ---
 
-<li class="relative">
-  <a
-    class="group block h-full w-full overflow-hidden rounded-2xl text-text ring-2 ring-background hover:bg-backgroundVariant hover:ring-primary focus-visible:bg-backgroundVariant focus-visible:ring-primary"
-    href={href}
-    ><span class="-mb-3 block h-[12em] w-full overflow-hidden rounded-t-xl p-2"
-      ><div class="overflow-hidden rounded-t-2xl">
-        <Image
-          alt={title}
-          width="640"
-          height="480"
-          class="h-full rounded-lg rounded-t-2xl object-cover ring-2 ring-backgroundVariant transition-transform delay-75 duration-500 ease-in-out group-hover:scale-105 group-focus-visible:scale-105"
-          src={src}
-          loading="eager"
-          quality={"low"}
-          format="avif"
-        />
-      </div></span
-    ><h3 class="block px-3.5 pt-5 text-lg font-medium">
-      {title}
-    </h3><p
-      class="mt-1 block border-b-transparent px-3.5 pb-5 pr-4 text-textVariant"
-    >
-      {description}
-    </p><span class="block pb-4">
-      {
-        online ? (
-          <div class="absolute bottom-3 right-5 flex items-center gap-1">
-            <div class="h-[8px] w-[8px] rounded-full bg-green-7" />
-            <span class="font-mono text-xs text-textVariant">online</span>
-          </div>
-        ) : (
-          <div class="absolute bottom-3 right-5 flex items-center gap-1">
-            <div class="h-[8px] w-[8px] rounded-full bg-red-7" />
-            <span class="font-mono text-xs text-textVariant">offline</span>
-          </div>
-        )
-      }
-    </span></a
+<a href={href} class="group py-3 no-underline">
+  <li
+    class="-ml-3 rounded px-3 py-3 group-hover:bg-neutral-200 dark:group-hover:bg-neutral-900"
   >
-</li>
-
-<style>
-  a {
-    text-decoration: none;
-  }
-</style>
+    <p class="link underline">{title}</p>
+    <span class="flex items-center gap-1">
+      <p class="text-sm text-textVariant">{description}</p><Icon
+        name="external"
+        class="text-text"
+      />
+    </span>
+  </li>
+</a>
