--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -176,7 +176,7 @@ if (pageTitle === "Trevor Lee | Homepage") {
     <div
       class=`bg-centerBackground text-text ${fullWidth ? "" : "px-4"} m-auto max-w-[640px]`
     >
-      <nav class="w-full py-4">
+      <nav class="mb-16 w-full py-4">
         <div class="flex items-center justify-between">
           <a href="/" class="group flex items-center rounded-xl">
             <div
