minor style changes, create astro micro blog post

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -8,13 +8,14 @@ import { Icon } from "astro-icon/components";
 ---
 
 <section>
-  <h1 class="text-xl font-semibold">Trevor Lee</h1>
-  <span class="text-sm text-textVariant">Front-End Developer</span>
-  <span class="mt-4 block text-textVariant"
-    >Building UIs with React since 2020. Passionate about interface design and
-    attention to detail, striving to create great experiences on the web. From
-    Vancouver, Canada.</span
+  <h1 class="text-2xl font-semibold">Trevor Lee</h1>
+  <span class="text-sm text-textVariant"
+    >Front-End Developer · Vancouver, Canada</span
   >
+  <span class="mt-4 block text-textVariant"
+    >Building websites with React and Node.js since 2020. Passionate about
+    interface design and crafting detailed, accessible experiences on the web.
+  </span>
 </section>
 <section class="mt-12">
   <DescriptionList>
