minor style changes

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -19,43 +19,43 @@ import { Icon } from "astro-icon/components";
 </section>
 <section class="mt-12">
   <DescriptionList>
-    <DescriptionTerm className="animate-down">Email</DescriptionTerm>
-    <DescriptionDetails className="animate-down flex items-center gap-1"
+    <DescriptionTerm>Email</DescriptionTerm>
+    <DescriptionDetails className="flex items-center gap-1"
       ><a href="mailto:trevortylerlee@gmail.com" class="link"
         >trevortylerlee@gmail.com</a
       ><Icon name="external" /></DescriptionDetails
     >
 
-    <DescriptionTerm className="animate-down">Phone</DescriptionTerm>
-    <DescriptionDetails className="animate-down flex items-center gap-1"
+    <DescriptionTerm>Phone</DescriptionTerm>
+    <DescriptionDetails className="flex items-center gap-1"
       ><a href="tel:+17782353815" class="link">+1 778 235 3815</a><Icon
         name="external"
       /></DescriptionDetails
     >
 
-    <DescriptionTerm className="animate-down">GitHub</DescriptionTerm>
-    <DescriptionDetails className="animate-down flex items-center gap-1"
+    <DescriptionTerm>GitHub</DescriptionTerm>
+    <DescriptionDetails className="flex items-center gap-1"
       ><a href="https://github.com/trevortylerlee" class="link"
         >@trevortylerlee</a
       ><Icon name="external" /></DescriptionDetails
     >
 
-    <DescriptionTerm className="animate-down">LinkedIn</DescriptionTerm>
-    <DescriptionDetails className="animate-down flex items-center gap-1"
+    <DescriptionTerm>LinkedIn</DescriptionTerm>
+    <DescriptionDetails className="flex items-center gap-1"
       ><a href="https://www.linkedin.com/in/trevortylerlee/" class="link"
         >@trevortylerlee</a
       ><Icon name="external" /></DescriptionDetails
     >
 
-    <DescriptionTerm className="animate-down">Resume</DescriptionTerm>
-    <DescriptionDetails className="animate-down flex items-center gap-1"
+    <DescriptionTerm>Resume</DescriptionTerm>
+    <DescriptionDetails className="flex items-center gap-1"
       ><a href="/trevor-lee-resume.pdf" class="link">Download</a><Icon
         name="download"
       /></DescriptionDetails
     >
 
-    <DescriptionTerm className="animate-down">Threads</DescriptionTerm>
-    <DescriptionDetails className="animate-down flex items-center gap-1"
+    <DescriptionTerm>Threads</DescriptionTerm>
+    <DescriptionDetails className="flex items-center gap-1"
       ><a href="https://www.threads.net/@trevortylerlee" class="link"
         >@trevortylerlee</a
       ><Icon name="external" /></DescriptionDetails
