--- a/src/components/Post.astro
+++ b/src/components/Post.astro
@@ -3,7 +3,7 @@ import { formatDate } from "../lib/utils";
 const { date, href, title } = Astro.props;
 ---
 
-<a href={`/posts/${href}`} class="group py-3 no-underline">
+<a href={`/posts/${href}`} class="animate-down group py-3 no-underline">
   <li
     class="-ml-3 rounded p-3 group-hover:bg-neutral-200 dark:group-hover:bg-neutral-900"
   >
