--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -4,7 +4,7 @@ import { Icon } from "astro-icon/components";
 const { href, title, description } = Astro.props;
 ---
 
-<a href={href} class="group py-3 no-underline">
+<a href={href} class="animate-down group py-3 no-underline">
   <li
     class="-ml-3 rounded px-3 py-3 group-hover:bg-neutral-200 dark:group-hover:bg-neutral-900"
   >
