--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -45,7 +45,7 @@ const { Content } = await post.render();
     </div>
     <div
       id="content"
-      class="prose prose-sm prose-neutral mx-auto mb-12 mt-8 sm:prose-base"
+      class="prose prose-sm prose-neutral mx-auto mb-12 mt-8 sm:prose-base prose-headings:font-semibold"
     >
       <Content />
     </div>
