--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -174,7 +174,7 @@ if (pageTitle === "Trevor Lee | Homepage") {
     >
     </div>
     <div
-      class=`bg-centerBackground text-text ${fullWidth ? "" : "px-4"} m-auto max-w-[640px]`
+      class=`bg-centerBackground dark:bg-centerBackground/90 text-text ${fullWidth ? "" : "px-4"} m-auto max-w-[640px]`
     >
       <nav class="mb-16 w-full py-4">
         <div class="flex items-center justify-between">
@@ -190,7 +190,7 @@ if (pageTitle === "Trevor Lee | Homepage") {
                 format="avif"
                 quality="high"
                 loading="eager"
-                class=""
+                draggable="false"
               />
               <span class="sr-only">Home page</span>
               <div
