--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -58,7 +58,7 @@ const pageTitle = "Trevor Lee | Homepage";
       <a
         href="/posts"
         class="link group -ml-1 flex items-center gap-1 px-1 py-2 text-sm"
-        >View older posts <Icon
+        >More posts<Icon
           class="text-text group-hover:animate-horizontal-bounce group-focus:animate-horizontal-bounce"
           name="arrow-right"
         />
