minor style changes, fix safari mobile hover

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,7 +21,7 @@ const pageTitle = "Trevor Lee | Homepage";
   </section>
 
   <section class="animate-down">
-    <h2 class="pb-4 pt-12 text-sm text-textVariant">Projects</h2>
+    <h2 class="pb-4 pt-12 text-lg font-medium">Projects</h2>
     <ul class="">
       <Project
         description="Blog theme for Astro with search, comments, and zero frameworks."
@@ -41,7 +41,7 @@ const pageTitle = "Trevor Lee | Homepage";
     </ul>
   </section>
   <section class="animate-down">
-    <h2 class="pb-4 pt-12 text-sm text-textVariant">Posts</h2>
+    <h2 class="pb-4 pt-12 text-lg font-medium">Recent Posts</h2>
     <ul class="">
       {
         formattedPosts.map((post) => (
