--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -6,7 +6,7 @@ const { href, title, description } = Astro.props;
 
 <a href={href} class="animate-down group py-3 no-underline">
   <li
-    class="-ml-3 rounded px-3 py-3 group-hover:bg-neutral-200 dark:group-hover:bg-neutral-900"
+    class="-ml-3 rounded px-3 py-3 transition-colors group-hover:bg-neutral-200 dark:group-hover:bg-neutral-900"
   >
     <p class="link underline">{title}</p>
     <span class="flex items-center gap-1">
