minor post edits

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,9 +29,9 @@ const pageTitle = "Trevor Lee | Homepage";
         title="Astro Micro 🔬"
       />
       <Project
-        description="Foster closeness through mutual vulnerability."
+        description="Build closer relationships through mutual vulnerability."
         href="https://thirtysixquestions.org"
-        title="Thirty Six Questions 💕"
+        title="Thirty Six Questions 🫂"
       />
       <Project
         description="Instantly preview drop-in CSS themes."
