--- a/src/components/TierRow.astro
+++ b/src/components/TierRow.astro
@@ -32,17 +32,15 @@ const colors = [
 <span class="hidden">{colors}</span>
 
 <div class=`flex min-h-16 items-center ${determineColor(color)} sm:min-h-24`>
-  <div
-    class="mr-[10px] grid min-w-8 place-content-center pl-[9px] font-medium text-white"
-  >
+  <div class="mr-[10px] grid min-w-8 place-content-center pl-[9px] text-white">
     {determineTier(color)}
   </div>
   <div
-    class="flex min-h-16 w-full flex-wrap gap-1 overflow-hidden bg-neutral-50 py-1 pl-2 dark:bg-black sm:min-h-24 sm:gap-4"
+    class="flex min-h-16 w-full flex-wrap gap-1 overflow-hidden bg-white py-1 pl-2 dark:bg-black sm:min-h-24 sm:gap-4"
   >
     {
       tierlist.length === 0 ? (
-        <div class="flex h-12 w-screen flex-wrap bg-neutral-50 pl-2 dark:bg-black sm:h-16 sm:gap-4" />
+        <div class="flex h-12 w-screen flex-wrap bg-white pl-2 dark:bg-black sm:h-16 sm:gap-4" />
       ) : (
         tierlist.map((item) => {
           return <TierListItem data={item} client:load />;
